--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 unbind C-b
 set -g prefix C-s
 
+# Use zsh as shell
+set-option -g default-shell /bin/zsh
+
 # Reload config file manually
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
