Highlight whitespace in red

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,8 +24,8 @@ set-option -g status-left-length 50
 set-option -g status-right "#(date '+%a, %b %d - %I:%M') "
 
 # Split windows
-bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key - split-window -v  -c "#{pane_current_path}"
+bind-key \ split-window -h  -c "#{pane_current_path}"
 
 # Navigate panes
 # Smart pane switching with awareness of vim splits
