--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,8 @@ bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
 bind-key -n C-l select-pane -R
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g status-keys "emacs"
 
 set-option -g status-bg '#666666'
